<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greek_blue"
    android:padding="20dp"
    tools:context=".SelectCharacter">

    <Button
        android:id="@+id/nextButton"
        android:layout_width="114dp"
        android:layout_height="66dp"
        android:backgroundTint="@color/greek_white"
        android:text="@string/next_button"
        android:textColor="@color/greek_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/character_select"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/greek_gold"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/characterRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.4">

        <RadioButton
            android:id="@+id/zeusOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/greek_white"
            android:checked="false"
            android:text="@string/character1_name"
            android:textColor="@color/greek_white"
            android:textSize="25sp"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="171dp" />

        <RadioButton
            android:id="@+id/poseidonOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="80dp"
            android:buttonTint="@color/greek_white"
            android:text="@string/character2_name"
            android:textColor="@color/greek_white"
            android:textSize="25sp" />


        <RadioButton
            android:id="@+id/hadesOption"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:buttonTint="@color/greek_white"
            android:text="@string/character3_name"
            android:textColor="@color/greek_white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/characterRadioGroup"
            app:layout_constraintStart_toStartOf="@+id/characterRadioGroup" />

    </RadioGroup>

    <ImageView
        android:id="@+id/zeusImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/poseidonImage"
        app:layout_constraintStart_toEndOf="@+id/characterRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/zeus"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/hadesImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintStart_toEndOf="@+id/characterRadioGroup"
        app:srcCompat="@drawable/hades"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/poseidonImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/hadesImage"
        app:layout_constraintStart_toEndOf="@+id/characterRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/zeusImage"
        app:srcCompat="@drawable/poseidon"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>